--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
-    "core-js": "2",
+    "@tensorflow/tfjs": "^1.1.2",
+    "core-js": "^3.1.3",
     "rxjs": "^6.5.2",
     "zone.js": "^0.9.1"
   },
