--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "@angular/platform-browser-dynamic": "8.0.0",
     "@angular/router": "8.0.0",
     "@tensorflow/tfjs": "1.1.2",
-    "@tensorflow/tfjs-node": "^1.1.2",
+    "@tensorflow/tfjs-core": "^1.2.1",
+    "@tensorflow/tfjs-node": "1.1.2",
     "core-js": "^3.1.3",
-    "node-fetch": "^2.6.0",
+    "node-fetch": "2.6.0",
     "rxjs": "6.5.2",
-    "string_decoder": "^1.2.0",
+    "string_decoder": "1.2.0",
     "zone.js": "0.9.1"
   },
   "scripts": {
