--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@angular/platform-browser-dynamic": "8.0.0",
     "@angular/router": "8.0.0",
     "@tensorflow/tfjs": "1.1.2",
-    "@tensorflow/tfjs-core": "^1.2.1",
+    "@tensorflow/tfjs-core": "1.2.1",
     "@tensorflow/tfjs-node": "1.1.2",
     "core-js": "^3.1.3",
     "node-fetch": "2.6.0",
