--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/common": "8.0.0",
-    "@angular/compiler": "8.0.0",
-    "@angular/core": "8.0.0",
-    "@angular/forms": "8.0.0",
-    "@angular/platform-browser": "8.0.0",
-    "@angular/platform-browser-dynamic": "8.0.0",
-    "@angular/router": "8.0.0",
-    "@tensorflow/tfjs": "1.1.2",
-    "@tensorflow/tfjs-core": "1.2.1",
-    "@tensorflow/tfjs-node": "1.1.2",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/forms": "^8.0.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/router": "^8.0.0",
+    "@tensorflow/tfjs": "^1.1.2",
+    "@tensorflow/tfjs-core": "^1.2.1",
+    "@tensorflow/tfjs-node": "^1.1.2",
     "core-js": "^3.1.3",
-    "node-fetch": "2.6.0",
-    "rxjs": "6.5.2",
-    "string_decoder": "1.2.0",
-    "zone.js": "0.9.1"
+    "node-fetch": "^2.6.0",
+    "rxjs": "^6.5.2",
+    "string_decoder": "^1.2.0",
+    "zone.js": "^0.9.1"
   },
   "scripts": {
     "ng": "ng",
